<resources>
    <string name="app_name">早押しボタン</string>
    <string name="level_text">Level：1</string>
    <string name="game_description">ああああ</string>
    <string name="high_score">HighScore：0msec</string>
    <string name="title_activity_hard_level3">HardLevel3Activity</string>
    <string name="title_activity_hard_level4">HardLevel4Activity</string>
    <string name="title_activity_very_hard_level1">VeryHardLevel1Activity</string>
    <string name="title_activity_very_hard_level2">VeryHardLevel2Activity</string>
    <string name="title_activity_very_hard_level3">VeryHardLevel3Activity</string>
    <string name="title_activity_very_hard_level4">VeryHardLevel4Activity</string>
    <string name="restButton_text">Button：</string>
    <string name="time_text">Time：</string>
    <string name="title_activity_high_score_clear">HighScoreClearActivity</string>
    <string name="button_count_text">100</string>
</resources>
